@@ -1,3 +1,10 @@
+2008-04-08  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Matthias Clasen <mclasen@redhat.com>
+
+	* main.c: (create_dialog): don't show the "accessible login" button if
+	gdmsetup is not available (bug #526944)
+
 2008-03-27  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Patrick Wade <patrick.wade@sun.com>
